Checkpoint: SEO 問題を修正しました： 1. メタディスクリプション（157文字）を追加 2. メタキーワードを追加 3. ページタイトル（56文字）を document.title で設定 4. og:title, og:description を追加 5. twitter:card, twitter:title, twitter:description を追加 6. アクセシビリティ属性（role, aria-label）を追加

--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,15 @@
     <link rel="icon" type="image/png" href="%VITE_APP_LOGO%" />
     <link rel="apple-touch-icon" href="%VITE_APP_LOGO%" />
     <title>%VITE_APP_TITLE%</title>
+    <meta name="description" content="SatireScope automatically generates witty satirical news commentary, creates AI-generated images, and posts them to your X (Twitter) account on a customizable schedule." />
+    <meta name="keywords" content="satirical news, AI news generator, Twitter automation, X automation, satirical content, AI-generated content, news satire, automated posting" />
+    <meta name="author" content="SatireScope" />
+    <meta property="og:title" content="SatireScope - Automated Satirical News Posting to X" />
+    <meta property="og:description" content="Automatically fetch latest news, generate witty satirical commentary, create AI images, and post to X on your schedule." />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="SatireScope - Automated Satirical News Posting" />
+    <meta name="twitter:description" content="AI-powered satirical news posting to X with automated scheduling and image generation." />
     <!-- Add Google Fonts here, example:
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
