Checkpoint: Open Graph（OG）タグを改善して、SNS でシェアされた際のプレビュー表示を実装しました。 1. プロフェッショナルな OG 画像（1200x630px）を作成 2. client/index.html に og:image, og:image:width, og:image:height, og:url を追加 3. Twitter Card タグを最適化（twitter:image, twitter:site, twitter:creator） 4. og:type を website に設定 これにより、Facebook、Twitter、LinkedIn などの SNS でシェアされた際に、カスタム画像とタイトル、説明が表示されるようになりました。

--- a/client/index.html
+++ b/client/index.html
@@ -15,9 +15,17 @@
     <meta property="og:title" content="SatireScope - Automated Satirical News Posting to X" />
     <meta property="og:description" content="Automatically fetch latest news, generate witty satirical commentary, create AI images, and post to X on your schedule." />
     <meta property="og:type" content="website" />
+    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:url" content="https://satirescope-eq2k3uhx.manus.space" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="SatireScope - Automated Satirical News Posting" />
     <meta name="twitter:description" content="AI-powered satirical news posting to X with automated scheduling and image generation." />
+    <meta name="twitter:image" content="/og-image.png" />
+    <meta name="twitter:site" content="@SatireScope" />
+    <meta name="twitter:creator" content="@SatireScope" />
     <!-- Add Google Fonts here, example:
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
